package com.company.lecastle.service.rank.conf;

public class ActiveConfig {

    public static final long OVER_ACTIVE_TIME=System.currentTimeMillis()+10000;

    public static final int MIN_SCORE = 0;

    public static final int MAX_SCORE = 10000;
}
